# kore-ai-backend

./: .env.production.example  .gitignore  Caddyfile  DEPLOY.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  worker.py
app/agents/: __init__.py  base.py  coach.py  content.py  context.py  customer_service.py  followup.py  icebreaker.py  llm.py  onboarding.py  orchestrator.py  proposal.py  qualification.py  registry.py  runner.py  sdr.py  setter.py
app/api/: deps.py
app/billing/: __init__.py  engine.py  stripe_client.py  usage.py
app/core/: config.py  context.py  database.py  enums.py  exceptions.py  logging.py  redis.py  security.py
app/events/: __init__.py  bus.py  handlers.py  schemas.py  types.py
app/integrations/: __init__.py  base.py  calendar.py  email.py  evolution.py  plaud.py  registry.py  scraping.py  smtp_email.py  transcription.py  voice.py  whatsapp.py
app/memory/: embeddings.py  long_term.py  manager.py  semantic.py  short_term.py
app/models/: __init__.py  agent_run.py  base.py  billing.py  contact.py  conversation.py  escalation.py  event.py  lead.py  memory.py  niche.py  prospect.py  tenant.py  tenant_integration.py  user.py
app/orchestrator/: __init__.py  escalation.py  metrics.py  policy.py  rules.py
app/schemas/: agent.py  billing.py  contact.py  escalation.py  event.py  lead.py  niche.py  tenant.py
app/services/: contact_service.py  (+5 more)
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
scripts/: demo_flow.py  init_db.py  seed_niches.py
(+23 files in other folders)
